# OptiMiles

./: .gitignore  CLAUDE.md  README.md  requirements.txt
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_card_acquirable.py  0003_catalog_rls_read_only.py  0004_sync_auth_users_to_public.py  0005_goal_lineage_indexes.py  0006_updated_at_triggers.py
backend/app/: __init__.py  config.py  main.py
backend/app/ai_reasoning/: __init__.py  _pydanticai.py  education.py  intent.py  model.py  narration.py
backend/app/api/: __init__.py  auth.py  catalog.py  deps.py  goals.py  health.py  observability.py  ratelimit.py  recommend.py  schemas.py  simulations.py
backend/app/domain/: __init__.py  catalog.py  context.py  enums.py  feasibility.py  goal.py  intent.py  narration.py  opportunity.py  ranking.py  recommendation.py  resolution.py  simulation.py  strategy.py
backend/app/knowledge/: __init__.py  education.py  goal_resolution.py  requirements.py  seed_catalog.py  store.py  validation.py  versioning.py
backend/app/optimization/: __init__.py  allocation.py  explain.py  feasibility.py  ranking.py  strategies.py
backend/app/pipeline/: __init__.py  assemble.py  context.py  run.py
backend/app/repositories/: __init__.py  catalog_admin.py  results.py  saved_goals.py
backend/app/simulation/: __init__.py  projector.py
backend/config/: ranking-weights-v1.yaml  ranking-weights-v2.yaml
backend/seeds/: README.md  load_to_db.py
backend/tests/: conftest.py
docs/: tracker.md
(+224 files in other folders)
