[project]
name = "optimiles-backend"
version = "0.1.0"
description = "OptiMiles backend — deterministic reward-optimization engines behind a FastAPI app. Entry point: docs/architecture/backend-build-plan-v1.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "httpx2>=0.1",
    "ruff>=0.8",
    "mypy>=1.14",
    "types-pyyaml>=6.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
# Docstrings legitimately use – and ₹; the ambiguous-unicode rules fight that.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
# Hand-written SQL DDL: aligned columns beat 100-col wrapping.
"alembic/versions/*" = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
files = ["app"]
exclude = ["alembic/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
